# talos26_ws

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.all  Dockerfile.eskisurucu  Dockerfile.hedef  Dockerfile.yedek  KURULUM_VE_SORUN_GIDERME.md  README.md  arac_paketi_drive_yukle.sh  arac_paketi_olustur.sh  baslat.sh  can_to_talos_cart.py  can_visualizer.py  control.py  docker-compose.beemobs.yml  docker-compose.yedek-beemobs.yml  docker-compose.yedek.yml  docker-compose.yml  docker-start.sh  manuel_baslat.sh  setup-vcan.sh  start_waypoint_demo.sh  yaya_state_machine.py
algi/levha/: yolov8_ros_node_fixed.py
algi/levha/yolov8_ros/: CMakeLists.txt
algi/park_durak/: park_durak_node.py
algi/serit/: lane_follow_node_fixed.py
algi/yaya_gecidi/: yaya_gecidi_node.py
azra-talos/cart_sim/: CMakeLists.txt
azra-talos/cart_sim/launch/: cart_sim.launch  engelli_sim.launch
azra-talos/cart_sim/plugins/: CartPlugin.cc
azra-talos/cart_sim/rviz/: cart.rviz
azra-talos/cart_sim/scripts/: arac_konum.py  debug_pc.py  fix_gazebo_cloud.py  gt_tf_broadcaster.py  mapping_node.py  odom_tf_broadcaster.py
azra-talos/cart_sim/urdf/: golf.urdf
azra-talos/cart_sim/worlds/: empty.world  engelli_sim.world
config/: canli_params.yaml
control/: Dockerfile  beemobs_bridge.py  beemobs_gazebo_emulatoru.py  can_decoder.py  can_to_talos_cart.py  can_visualizer.py  control.py  direksiyon_can_server.py  direksiyon_teleop.py  docker-compose.yml  entrypoint.sh  kalibre_oto.py  requirements.txt  setup.sh  start.sh  talos_control.md  talos_state_to_can.py  test_beemobs_bridge.py  test_c1_engel_kacinma.py  test_estop_deadlock.py  test_oscillation_kill.py  test_smaneuver.py  test_v03_uyumluluk.py
decision_algorithm/: README.md
decision_algorithm/config/: decision_params.yaml
decision_algorithm/scripts/: decision_node.py  test_publisher.py
enes-talos/: Dockerfile  README.md  karar.py
engel verme nodu/: engel_node.py  engel_system.launch  readme.md
fixes/: engel_node_fixed.py  hedef_yoneticisi.py  karar.py  waypoint_pub.py  yolov8_ros_node_fixed.py
hedef/: config.py  dstar_lite.py  graph_builder.py  hedef_logger.py  hedef_yoneticisi.py  manager.py  scenario_runner.py  visualizer.py
hedef/logs/: .gitignore
hilmi-talos/: Dockerfile  README.md  ackermann.py  can_decoder.py  can_visualizer.py  can_waypoint_follower.py  control.py  docker-compose.yml  docker-start.sh  setup.sh  start.sh  start_waypoint_demo.sh  talos_state_to_can.py
karar/: Dockerfile  README.md  RUNBOOK.md  avoidance_geometry.py  bb.py  cikis_debounce.py  karar_bt_node.py  karar_logger.py  karar_panel.py  levha_kisit.py  obstacle_fusion.py  obstacle_memory.py  overtake.py  reroute.py  ros_bridge.py
karar/behaviors/: actions.py  conditions.py  decorators.py
karar/config/: params.yaml
karar/test/: replay_scenarios.py  smoke_test.sh  test_avoidance_geometry.py  test_cikis_debounce.py  test_engel_merkez_blokaj.py  test_levha_kisit.py  test_obstacle_memory.py  test_overtake.py  test_park_fsm.py  test_reroute.py  test_trafik_isigi.py  test_yay_kapisi.py  test_yaya_gecidi.py  test_yaya_levha_kapisi.py
karar/trees/: main_tree.py
karar_bt/: README.md  bb.py  karar_bt_node.py  ros_bridge.py
karar_bt/behaviors/: actions.py  conditions.py
karar_bt/config/: params.yaml
karar_bt/test/: replay_scenarios.py  test_obstacle_fusion.py
karar_bt/trees/: main_tree.py
konum/: arac_hud.py  konum.py  konum_yoneticisi.py
lane/: README.md  lane_follow_node.py
lane/scripts/: lane_follow_node.py
levha_tespiti/: PERFORMANS.md
levha_tespiti/yolov8_ros/: package.xml
levha_tespiti/yolov8_ros/scripts/: yolo_gazebo_check.py  yolov8_ros_node.py
lidar/: Dockerfile  engel_node_fixed.py  ground_filter.py  pointcloud_obstacle_publisher.py
lidar/talos_obstacle_detector/: CMakeLists.txt  README.md  package.xml
lidar/talos_obstacle_detector/config/: params.yaml
lidar/talos_obstacle_detector/launch/: obstacle_detector.launch
lidar/talos_obstacle_detector/src/: map_publisher_node.cpp  obstacle_detector_node.cpp
maps/: final_graph.yaml  gen_track_graph.py  harita_graf_ciz.py  my_map.pgm  my_map.yaml  waypoint_pub.py
melih-konum/: README.md  arac_hud.py  konum_yoneticisi.py
missions/: birincitur.geojson  current_graph.json  current_graph_pre_calib.json  dual_lane_graph.json  dual_lane_graph.yaml  gorev_snapped.geojson  ikincitur.geojson  sim_track.geojson  ucuncutur.geojson
prototip-1/: safe_zone_detector.py  waypoint_dual_lane_generator.py  waypoint_grid_snap.py  waypoint_line_corrector.py
samed-algo/: README.md  config.py  dstar_lite.py  graph_builder.py  hedef_yoneticisi.py  manager.py
scripts/talos26_ws/fixes/: hedef_yoneticisi.py
scripts/talos26_ws/hilmi-talos/: control.py
slam_2d/: CMakeLists.txt  README.txt  package.xml
slam_2d/launch/: start_slam.launch
slam_2d/rviz/: slam_2d.rviz
slam_2d/scripts/: gt_tf_broadcaster.py  save_map.sh  waypoint_saver.py  waypoint_visualizer.py
talos_common/: __init__.py  canli_params.py  logger.py
talos_perception/: README.md
talos_perception/talos_ground_removal/: CMakeLists.txt  package.xml
talos_perception/talos_ground_removal/config/: ground_removal.yaml
talos_perception/talos_ground_removal/launch/: ground_removal.launch  perception.launch
talos_perception/talos_ground_removal/rviz/: ground_removal.rviz
talos_perception/talos_ground_removal/src/: ground_removal.cpp
talos_perception/talos_lidar_filter/: CMakeLists.txt  package.xml
talos_perception/talos_lidar_filter/config/: lidar_filter.yaml
talos_perception/talos_lidar_filter/launch/: lidar_filter.launch
talos_perception/talos_lidar_filter/src/: outlier_remove.cpp  pass_filter.cpp  voxel_filter.cpp
talos_perception/talos_obstacle_detector/: package.xml
talos_perception/talos_obstacle_detector/launch/: obstacle_detector.launch  perception_all.launch
talos_perception/talos_obstacle_detector/src/: obstacle_detector_node.cpp
waypoint-editor/: README.md  requirements.txt  track_calibration.json  waypoint_editor.py
yaya_gecidi_algilama/: README.md
(+2 files in other folders)
