<?xml version="1.0"?>
<package format="2">
  <name>talos_obstacle_detector</name>
  <version>0.1.0</version>
  <description>
    Obstacle detection by comparing live 3D LiDAR against a pre-built static
    PCD map. Publishes BoundingBoxArray, PoseArray and a diff PointCloud2.
  </description>

  <maintainer email="keremenon@gmail.com">Kerem</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
</package>
