<?xml version="1.0"?>
<package format="2">
  <name>talos_ground_removal</name>
  <version>0.1.0</version>
  <description>
    Patchwork++ tabanli zemin ayiklama. Sensor cevresini esmerkezli halka/
    sektorlere bolup (CZM) her hucreye yerel duzlem oturtur (R-GPF), egim/
    yukseklik esiklerini adaptif gunceller (A-GLE) ve kare-arasi ground revert
    (TGR) yapar. Cikti: zemin cikarilmis engel bulutu + ayrik zemin bulutu.
    Cekirdek: vendor'lanmis PatchWorkpp (include/patchworkpp, MIT, url-kaist).
  </description>

  <maintainer email="keremenon@gmail.com">Kerem</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>eigen</depend>
</package>
