<?xml version="1.0"?>
<package format="2">
  <name>talos_obstacle_detector</name>
  <version>0.1.0</version>
  <description>
    DBSCAN tabanli kumeleme ve PCA tabanli OBB (Oriented Bounding Box) cikarimi
    ile zemin-ayiklanmis LiDAR nokta bulutundan (/cart/points_noground) engel
    tespiti. jsk_recognition_msgs/BoundingBoxArray, PoseArray ve renkli kume
    bulutu yayinlar.
  </description>

  <maintainer email="keremenon@gmail.com">Kerem</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>jsk_recognition_msgs</depend>
</package>
